update projece details and grid and table view

--- a/projectDetails.html
+++ b/projectDetails.html
@@ -249,9 +249,14 @@
 
                                             </form>
                                         </div>
-                                        <div class="ml-2">
-                                            <img src="assets/All Project/list-icon.png" alt="" class="icon-table">
-                                            <img src="assets/All Project/p-list-2.png" alt="" class="icon-picture">
+                                        <div class="ml-3 d-flex align-items-center">
+
+                                            <div class="icon-table mr-3">
+                                                <i class="fa-solid fa-list fa-xl"></i>
+                                            </div>
+                                            <div class="icon-picture mr-2">
+                                                <i class="fa-solid fa-bars fa-xl"></i>
+                                            </div>
                                         </div>
                                     </div>
 
@@ -260,88 +265,98 @@
                             <!--project amin content top nav var end  -->
 
                             <!-- project show in picture start -->
-                            <div class="project-image-folder mx-4 mt-4">
+                            <div id="productContainer" class="project-image-folder mx-3 mt-4">
                                 <div class="image-container">
+                                    <div class="d-flex justify-content-end py-2 px-3">
+                                        <input type="checkbox" id="checkbox1" class="cheeck-box">
+                                    </div>
                                     <div class="pt-3">
                                         <div>
-                                            <img src="assets/New folder/IMG_20210722_202210.jpg" alt="" class="project-image">
+                                            <img src="assets/New folder/IMG_20210722_202210.jpg" alt=""
+                                                class="project-image">
                                         </div>
+
                                         <div class="mt-2 d-flex justify-content-around align-items-center">
                                             <p class="mt-2">Lorem ipsum</p>
+                                            <h2 style="display: none;">22 Nov 2023 6:20Am</h2>
+                                            <h3 style="display: none;">File Folder</h3>
+                                            <h4 style="display: none;">150 Byte</h4>
                                             <img src="assets/All Project//vector-details.png" alt=""
                                                 class="project-details-icon">
                                         </div>
                                     </div>
 
                                 </div>
-                                <div class="image-container">
+                                <div class="image-container grid-item">
+                                    <div class="d-flex justify-content-end py-2 px-3">
+                                        <input type="checkbox" id="checkbox1" class="cheeck-box">
+                                    </div>
                                     <div class="pt-3">
                                         <div>
-                                            <img src="assets/New folder/ON07047463__ALT01__cosmic rebelrecycled gloss black side (1).jpg" alt="" class="project-image">
+                                            <img src="assets/New folder/IMG_20210722_202210.jpg" alt=""
+                                                class="project-image">
                                         </div>
+
                                         <div class="mt-2 d-flex justify-content-around align-items-center">
                                             <p class="mt-2">Lorem ipsum</p>
+                                            <h2 style="display: none;">22 Nov 2023 6:20Am</h2>
+                                            <h3 style="display: none;">File Folder</h3>
+                                            <h4 style="display: none;">150 Byte</h4>
                                             <img src="assets/All Project//vector-details.png" alt=""
                                                 class="project-details-icon">
                                         </div>
                                     </div>
 
                                 </div>
-                                <div class="image-container">
+                                <div class="image-container grid-item">
+                                    <div class="d-flex justify-content-end py-2 px-3">
+                                        <input type="checkbox" id="checkbox1" class="cheeck-box">
+                                    </div>
                                     <div class="pt-3">
                                         <div>
-                                            <img src="assets/New folder/OCP Design14.jpg" alt="" class="project-image">
+                                            <img src="assets/New folder/IMG_20210722_202210.jpg" alt=""
+                                                class="project-image">
                                         </div>
+
                                         <div class="mt-2 d-flex justify-content-around align-items-center">
                                             <p class="mt-2">Lorem ipsum</p>
+                                            <h2 style="display: none;">22 Nov 2023 6:20Am</h2>
+                                            <h3 style="display: none;">File Folder</h3>
+                                            <h4 style="display: none;">150 Byte</h4>
                                             <img src="assets/All Project//vector-details.png" alt=""
                                                 class="project-details-icon">
                                         </div>
                                     </div>
 
                                 </div>
-                                <div class="image-container">
+                                <div class="image-container grid-item">
+                                    <div class="d-flex justify-content-end py-2 px-3">
+                                        <input type="checkbox" id="checkbox1" class="cheeck-box">
+                                    </div>
                                     <div class="pt-3">
                                         <div>
-                                            <img src="assets/New folder/ON07095660__ALT05__4129116214_dt5.jpg" alt="" class="project-image">
+                                            <img src="assets/New folder/IMG_20210722_202210.jpg" alt=""
+                                                class="project-image">
                                         </div>
+
                                         <div class="mt-2 d-flex justify-content-around align-items-center">
                                             <p class="mt-2">Lorem ipsum</p>
+                                            <h2 style="display: none;">22 Nov 2023 6:20Am</h2>
+                                            <h3 style="display: none;">File Folder</h3>
+                                            <h4 style="display: none;">150 Byte</h4>
                                             <img src="assets/All Project//vector-details.png" alt=""
                                                 class="project-details-icon">
                                         </div>
                                     </div>
 
                                 </div>
-                           
+
+
+
 
                             </div>
                             <!-- project show in picture end -->
 
-                            <!-- project show in table start -->
-                            <div class="mx-4 mt-4 project-show-table">
-                                <table class="table table-bordered">
-                                    <thead>
-                                        <tr>
-                                            <th scope="col">SL</th>
-                                            <th scope="col">Name</th>
-                                            <th scope="col">Date Modified</th>
-                                            <th scope="col">Type</th>
-                                            <th scope="col">Size</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <th scope="row">1</th>
-                                            <td>Mark</td>
-                                            <td>Otto</td>
-                                            <td>@mdo</td>
-                                        </tr>
-
-                                    </tbody>
-                                </table>
-                            </div>
-                            <!-- project show in table end -->
                         </div>
                     </div>
                     <!-- all project main contenter end -->
@@ -354,7 +369,8 @@
                         <div class="d-flex justify-content-center">
                             <div class="image-container-details">
                                 <div class="mt-3">
-                                    <img src="assets/New folder/ON07095660__ALT05__4129116214_dt5.jpg" alt="" class="project-image">
+                                    <img src="assets/New folder/ON07095660__ALT05__4129116214_dt5.jpg" alt=""
+                                        class="project-image">
                                 </div>
                                 <p class="mt-2">Lorem ipsum</p>
                             </div>
