update my work page

--- a/checked_by_projects_details.html
+++ b/checked_by_projects_details.html
@@ -276,10 +276,15 @@
                               <!-- project show in picture start -->
                               <div class="project-image-folder mx-4 mt-4">
                                 <div class="image-container">
+                                    <div class="d-flex justify-content-end py-2 px-3">
+                                        <input type="checkbox" id="checkbox1" class="cheeck-box">
+                                    </div>
                                     <div class="pt-3">
                                         <div>
-                                            <img src="assets/New folder/IMG_20210722_202210.jpg" alt="" class="project-image">
+                                            <img src="assets/New folder/IMG_20210722_202210.jpg" alt=""
+                                                class="project-image">
                                         </div>
+
                                         <div class="mt-2 d-flex justify-content-around align-items-center">
                                             <p class="mt-2">Lorem ipsum</p>
                                             <img src="assets/All Project//vector-details.png" alt=""
@@ -289,10 +294,15 @@
 
                                 </div>
                                 <div class="image-container">
+                                    <div class="d-flex justify-content-end py-2 px-3">
+                                        <input type="checkbox" id="checkbox1" class="cheeck-box">
+                                    </div>
                                     <div class="pt-3">
                                         <div>
-                                            <img src="assets/New folder/ON07047463__ALT01__cosmic rebelrecycled gloss black side (1).jpg" alt="" class="project-image">
+                                            <img src="assets/New folder/IMG_20210722_202210.jpg" alt=""
+                                                class="project-image">
                                         </div>
+
                                         <div class="mt-2 d-flex justify-content-around align-items-center">
                                             <p class="mt-2">Lorem ipsum</p>
                                             <img src="assets/All Project//vector-details.png" alt=""
@@ -302,10 +312,15 @@
 
                                 </div>
                                 <div class="image-container">
+                                    <div class="d-flex justify-content-end py-2 px-3">
+                                        <input type="checkbox" id="checkbox1" class="cheeck-box">
+                                    </div>
                                     <div class="pt-3">
                                         <div>
-                                            <img src="assets/New folder/OCP Design14.jpg" alt="" class="project-image">
+                                            <img src="assets/New folder/IMG_20210722_202210.jpg" alt=""
+                                                class="project-image">
                                         </div>
+
                                         <div class="mt-2 d-flex justify-content-around align-items-center">
                                             <p class="mt-2">Lorem ipsum</p>
                                             <img src="assets/All Project//vector-details.png" alt=""
@@ -315,10 +330,15 @@
 
                                 </div>
                                 <div class="image-container">
+                                    <div class="d-flex justify-content-end py-2 px-3">
+                                        <input type="checkbox" id="checkbox1" class="cheeck-box">
+                                    </div>
                                     <div class="pt-3">
                                         <div>
-                                            <img src="assets/New folder/ON07095660__ALT05__4129116214_dt5.jpg" alt="" class="project-image">
+                                            <img src="assets/New folder/IMG_20210722_202210.jpg" alt=""
+                                                class="project-image">
                                         </div>
+
                                         <div class="mt-2 d-flex justify-content-around align-items-center">
                                             <p class="mt-2">Lorem ipsum</p>
                                             <img src="assets/All Project//vector-details.png" alt=""
