--- a/projectDetails.html
+++ b/projectDetails.html
@@ -252,10 +252,10 @@
                                         <div class="ml-3 d-flex align-items-center">
 
                                             <div class="icon-table mr-3">
-                                                <i class="fa-solid fa-list fa-xl"></i>
+                                                <i class="fa-solid fa-list fa-sm"></i>
                                             </div>
                                             <div class="icon-picture mr-2">
-                                                <i class="fa-solid fa-bars fa-xl"></i>
+                                                <i class="fa-solid fa-bars fa-sm"></i>
                                             </div>
                                         </div>
                                     </div>
