complete Welcome section

--- a/client protal/client-protal.html
+++ b/client protal/client-protal.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="dropdown-container px-lg-4" id="dropdown_id">
                     <div class="modal-contents">
-                        <div class="d-lg-flex align-items-center mx-lg-3 py-3">
+                        <div class="d-lg-flex align-items-center mx-lg-3 py-3 client_email_info">
                             <div>
                                 <img src="assets/RICSU 1.png" alt="" class="email_image">
                             </div>
@@ -53,6 +53,8 @@
             </div>
 
             <!-- client profile and logout button end -->
+
+            <!-- client profile sidevar -->
             <div class="client_side_nav_container">
                 <div class="clicent_side_nav mt-4">
                     <a class="nav-link mt-3 active_sidnav" href="#">
@@ -106,9 +108,10 @@
             </div>
 
         </div>
-
+        <!-- client profile sidevar end -->
 
         <div class="client-right-div">
+            <!-- top nav var  -->
             <nav class="client_top_navbar">
                 <div class="d-flex align-items-center">
                     <button class="btn side-menu-btn d-lg-none">
@@ -121,6 +124,7 @@
                         </li>
                     </ul>
                 </div>
+
                 <div class="navbar__logo">
                     <a class="notification" data-notfication_id="dropdown_notification">
                         <img src="assets/Vector.png" alt="" class="notification-icon1">
@@ -129,6 +133,7 @@
 
                 </div>
             </nav>
+
             <div class="dropdown-notification px-lg-4" id="dropdown_notification">
 
                 <div class="d-flex justify-content-between notification-item mt-3">
@@ -140,10 +145,21 @@
                     </div>
                 </div>
                 <div>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores maxime, magnam rem totam tenetur dolorum aspernatur! Minus, et architecto! Mollitia ducimus dolorem, quidem facilis tenetur omnis magnam odio saepe vitae.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores maxime, magnam rem totam tenetur
+                    dolorum aspernatur! Minus, et architecto! Mollitia ducimus dolorem, quidem facilis tenetur omnis
+                    magnam odio saepe vitae.
                 </div>
-                
+
             </div>
+            <!-- top nav var  end -->
+
+
+         <div class="welcome_section">
+            <h6>Hello! <span class="welcome_client">Robertson</span></h6>
+            <h4>Welcome to Dashboard</h4>
+
+         </div>
+
         </div>
     </div>
 
