complete Welcome to Dashboard section

--- a/client protal/client-protal.html
+++ b/client protal/client-protal.html
@@ -12,6 +12,8 @@
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.18/css/jquery.dataTables.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
@@ -154,20 +156,143 @@
             <!-- top nav var  end -->
 
 
-         <div class="welcome_section">
-            <h6>Hello! <span class="welcome_client">Robertson</span></h6>
-            <h4>Welcome to Dashboard</h4>
+            <div class="welcome_section">
+                <div class="wellcome_massage">
+                    <h6>Hello! <span class="welcome_client">Robertson</span></h6>
+                    <h4>Welcome to Dashboard</h4>
+                    <hr class="welcome_divider">
+                </div>
 
-         </div>
+                <div class="card_container mb-5">
+                    <div class="card_item1 text-center">
+                        <div class="cart1_content">
+                            <h4>Bangladesh</h4>
+                            <h6>Monday 22th Feb</h6>
+                            <p class="mt-4">10:20 <span class="time_schedule">PM</span></p>
+                        </div>
+                        <div class="cart1_content mt-3">
+                            <h4>Bangladesh</h4>
+                            <h6>Monday 22th Feb</h6>
+                            <p class="mt-4">10:20 <span class="time_schedule">PM</span></p>
+                        </div>
+                    </div>
+                    <div class="card_item2 text-center">
+                        <div class="card_item2_content1">
+                            <h6>Total Received</h6>
+                            <h4>80,500.00<span class="amount_type">$</span></h4>
+                            <h5>+10% since last month</h5>
+                        </div>
+                        <div class="card_item2_content2">
+                            <div>
+                                <img src="assets/Ellipse 63.png" alt="">
+                                <span class="paid">Paid</span>
+                            </div>
+                            <h4>1,500.00 <span class="amount_type">$</span></h4>
 
+                        </div>
+                        <div class="card_item2_content3 mt-4">
+                            <div>
+                                <img src="assets/Ellipse 64.png" alt="">
+                                <span class="due">Due</span>
+                            </div>
+                            <h4>1,500.00 <span class="amount_type">$</span></h4>
+                        </div>
+
+                    </div>
+                    <div class="card_item3">
+                        <div class="card_iteme_grid">
+                            <div class="card_item3_content1">
+                                <img src="assets/Frame 629540.png" alt="">
+                            </div>
+
+                            <div>
+                                <div class="d-flex justify-content-between  align-items-center project_list_text">
+                                    <div class="d-flex">
+                                        <div>
+                                            <img src="assets/icon1.png" alt="" class="card3_icon">
+                                        </div>
+
+                                        <div class="ml-2 card3_content_text">
+                                            <h6>Project up Next</h6>
+                                            <h4>500</h4>
+                                        </div>
+                                    </div>
+
+                                    <div class="ml-5">
+                                        <img src="assets/less.png" alt="">
+                                    </div>
+                                </div>
+                                <!-- project list 2 -->
+                                <div class="d-flex justify-content-between  align-items-center project_list_text mt-3">
+                                    <div class="d-flex">
+                                        <div>
+                                            <img src="assets/icon2.png" alt="" class="card3_icon">
+                                        </div>
+
+                                        <div class="ml-2 card3_content_text">
+                                            <h6>Ready Project</h6>
+                                            <h4>2000</h4>
+                                        </div>
+                                    </div>
+
+                                    <div class="ml-5">
+                                        <img src="assets/less.png" alt="">
+                                    </div>
+                                </div>
+                                <!-- project list 3 -->
+                                <div class="d-flex justify-content-between  align-items-center project_list_text mt-3">
+                                    <div class="d-flex">
+                                        <div>
+                                            <img src="assets/icon3.png" alt="" class="card3_icon">
+                                        </div>
+
+                                        <div class="ml-2 card3_content_text">
+                                            <h6>In Progress Project</h6>
+                                            <h4>500</h4>
+                                        </div>
+                                    </div>
+
+                                    <div class="ml-5">
+                                        <img src="assets/less.png" alt="">
+                                    </div>
+                                </div>
+                                 <!-- project list 4 -->
+                                 <div class="d-flex justify-content-between  align-items-center project_list_text mt-3">
+                                    <div class="d-flex">
+                                        <div>
+                                            <img src="assets/icon4.png" alt="" class="card3_icon">
+                                        </div>
+
+                                        <div class="ml-2 card3_content_text">
+                                            <h6>Completed Project</h6>
+                                            <h4>2000</h4>
+                                        </div>
+                                    </div>
+
+                                    <div class="ml-5">
+                                        <img src="assets/less.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
         </div>
-    </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js"></script>
-    <script src="custom.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.0.4/popper.js"></script>
-    <script src="https://cdn.usebootstrap.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="https://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js"></script>
+        <script src="custom.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.0.4/popper.js"></script>
+        <script src="https://cdn.usebootstrap.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+
+
+
 </body>
 
 </html>
