complete BillingInfo page

--- a/client protal/client-protal.html
+++ b/client protal/client-protal.html
@@ -66,7 +66,7 @@
                     </a>
                     <a class="nav-link mt-2" href="#">
                         <div class="link-icon">
-                            <span class=" ml-2">Billing</span>
+                            <span class=" ml-2">Billing Info</span>
                         </div>
                     </a>
                     <a class="nav-link mt-2" href="#">
