--- a/checked_by_projects.html
+++ b/checked_by_projects.html
@@ -206,7 +206,7 @@
                                             :
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-right bg-primary check_project_dropdown">
-                                            <a href="checked_by_projects_details.html" class="dropdown-item ">View Details</a>
+                                            <a href="checked_by_projects_details.html" class="dropdown-item view-details">View Details</a>
                                         </div>
                                     </div>
                                 </td>
