--- a/client protal/client-protal.html
+++ b/client protal/client-protal.html
@@ -59,19 +59,19 @@
             <!-- client profile sidevar -->
             <div class="client_side_nav_container">
                 <div class="clicent_side_nav mt-4">
-                    <a class="nav-link mt-3 active_sidnav" href="#">
+                    <a class="nav-link mt-3 active_sidnav" href="client-protal.html">
                         <div class="link-icon">
                             <span> Dashboard</span>
                         </div>
                     </a>
-                    <a class="nav-link mt-2" href="#">
+                    <a class="nav-link mt-2" href="BillingInfo.html">
                         <div class="link-icon">
-                            <span class=" ml-2">Billing Info</span>
+                            <span class="">Billing Info</span>
                         </div>
                     </a>
                     <a class="nav-link mt-2" href="#">
                         <div class="link-icon">
-                            <span class=" ml-2">FTP List</span>
+                            <span class="">FTP List</span>
                         </div>
                     </a>
                     <a class="nav-link mt-2" href="#">
@@ -82,22 +82,22 @@
 
                     <a class="nav-link mt-2" href="#">
                         <div class="link-icon">
-                            <span class=" ml-2">Project Tracking</span>
+                            <span class="">Project Tracking</span>
                         </div>
                     </a>
                     <a class="nav-link mt-2" href="#">
                         <div class="link-icon">
-                            <span class=" ml-2">Invoice Management</span>
+                            <span class="">Invoice Management</span>
                         </div>
                     </a>
                     <a class="nav-link mt-2" href="#">
                         <div class="link-icon">
-                            <span class=" ml-2">Payment Management</span>
+                            <span class="">Payment Management</span>
                         </div>
                     </a>
                     <a class="nav-link mt-2" href="#">
                         <div class="link-icon">
-                            <span class=" ml-2">Marketing Expart</span>
+                            <span class="">Marketing Expart</span>
                         </div>
                     </a>
                 </div>
