complete upload file page

--- a/client protal/client-protal.html
+++ b/client protal/client-protal.html
@@ -69,7 +69,7 @@
                             <span class="">Billing Info</span>
                         </div>
                     </a>
-                    <a class="nav-link mt-2" href="#">
+                    <a class="nav-link mt-2" href="ftp-list.html">
                         <div class="link-icon">
                             <span class="">FTP List</span>
                         </div>
