--- a/client protal/ftp-list.html
+++ b/client protal/ftp-list.html
@@ -69,7 +69,7 @@
                             <span class=" ">Billing Info</span>
                         </div>
                     </a>
-                    <a class="nav-link mt-2  active_sidnav" href="#">
+                    <a class="nav-link mt-2  active_sidnav" href="ftp-list.html">
                         <div class="link-icon">
                             <span class=" ">FTP List</span>
                         </div>
@@ -160,7 +160,7 @@
             <div class="Billing_data_table">
                 <div class="mt-5 mx-4 data-table">
                     <div class="Billing-title mt-3">
-                        FTP List
+                       Upload Files
                     </div>
                     <div class="d-flex justify-content-end">
                         <button class="btn btn-primary" data-toggle="ftp-add-new" data-target="ftp-add"> Add
@@ -343,14 +343,14 @@
                         <p class="close-modal mr-2 mt-2">&times;</p>
                     </div>
                     <div class="modal-body">
-                       <p> Are you sure you want to delete this FTP List?</p>
+                        <p> Are you sure you want to delete this FTP List?</p>
                     </div>
-                
+
                     <div class="mb-3 mr-3 d-flex justify-content-end">
                         <button class="mr-3 cancle">Cancel</button>
                         <button class="connfirm ">Confirm</button>
                     </div>
-                   
+
                 </div>
             </div>
 
