--- a/project_view.html
+++ b/project_view.html
@@ -234,8 +234,29 @@
                             <!--project amin content top nav var end  -->
 
                             <!-- project show in picture start -->
-                            <div id="productContainer" class="project-image-folder mx-3 mt-4">
+                            <div id="productContainer" class="project-view-image-folder mx-3 mt-4">
                                 <div class="image-container">
+                                    <div class="d-flex justify-content-end py-2 px-3">
+                                        <input type="checkbox" id="checkbox1" class="cheeck-box">
+                                    </div>
+                                    <div class="pt-3">
+                                        <div>
+                                            <img src="assets/New folder/IMG_20210722_202210.jpg" alt=""
+                                                class="project-image">
+                                        </div>
+
+                                        <div class="mt-2 d-flex justify-content-around align-items-center">
+                                            <p class="mt-2">Lorem ipsum</p>
+                                            <h2 style="display: none;">22 Nov 2023 6:20Am</h2>
+                                            <h3 style="display: none;">File Folder</h3>
+                                            <h4 style="display: none;">150 Byte</h4>
+                                            <img src="assets/All Project//vector-details.png" alt=""
+                                                class="project-details-icon">
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="image-container grid-item">
                                     <div class="d-flex justify-content-end py-2 px-3">
                                         <input type="checkbox" id="checkbox1" class="cheeck-box">
                                     </div>
