update upload files details

--- a/client protal/upload-files-details.html
+++ b/client protal/upload-files-details.html
@@ -200,7 +200,7 @@
                         <!-- MAIN CONTENT  -->
 
                          <!-- project show in picture start -->
-                         <div id="productContainer" class="files-image-folder mx-3 mt-4">
+                         <div id="uploadFileContainer" class="files-image-folder mx-3 mt-4">
                             <div class="files-image-container">
                                 <div class="d-flex justify-content-end py-2 px-3">
                                     <input type="checkbox" id="checkbox1" class="cheeck-box">
