--- a/client protal/Auth/singup.html
+++ b/client protal/Auth/singup.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="singin.css" />
+    <link rel="stylesheet" href="singup.css" />
 
     <link
       rel="stylesheet"
@@ -26,54 +26,240 @@
       type="text/css"
       href="https://cdn.datatables.net/1.10.18/css/jquery.dataTables.min.css"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="login_container">
-      <div class="login_from_container">
-        <div class="login_form_content">
-          <div class="login_logo">
-            <img src="../assets/login_logo.png" alt="" />
-            <h4 class="mt-4">Sign up</h4>
-            <p class="mt-3">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry.
-            </p>
+    <div class="singup_container">
+      <div class="singup_content">
+        <div class="singup_log">
+          <img src="../assets/image 1.png" alt="" />
+          <p>offshore it</p>
+          <h6>(*) fields are required</h6>
+          <div class="d-flex align-items-center">
+            <hr class="singup_divider" />
+            <h5>Your credentials</h5>
+            <hr class="singup_divider" />
           </div>
+        </div>
 
+        <div>
           <form>
-            <div class="login_input">
-              <label>Email</label><br />
-              <input type="email" name="" id="" />
-            </div>
-            <div class="login_input mt-4">
-              <label>Password</label><br />
-              <input type="password" name="" id="" />
-            </div>
-            <div class="login_input mt-4">
-              <label>Re-type password</label><br />
-              <input type="password" name="" id="" />
-            </div>
-
-            <div class="my-3">
-              <input type="checkbox" id="checkbox1" class="cheeck-box" />
-              <label for="checkbox1" class="cleckbox-lebel mr-1">Remember me</label>
+            <div class="from_content">
+              <label class="label">
+                Username<span class="text-danger ml-1">*</span>
+              </label>
+              <div class="input_container">
+                <i class="fa-solid fa-user-tie fa-lg icon"></i>
+                <input
+                  class="input-field"
+                  type="text"
+                  placeholder="Type Username"
+                />
+              </div>
             </div>
 
-            <div class="login_input mt-4">
-                <input type="submit" value="Sign up" class="submit_btn">
+            <div class="from_content">
+              <label class="label">
+                Email <span class="text-danger ml-1">*</span>
+              </label>
+              <div class="input_container">
+                <i class="fa-solid fa-envelope fa-lg icon"></i>
+                <input
+                  type="email"
+                  name=""
+                  id=""
+                  class="input-field"
+                  placeholder="Type Email"
+                />
+              </div>
             </div>
-           
+
+            <div class="from_content">
+              <label class="label">
+                Password<span class="text-danger ml-1">*</span>
+              </label>
+              <div class="input_container">
+                <i class="fa-solid fa-key fa-lg icon"></i>
+                <input
+                  class="input-field"
+                  type="password"
+                  placeholder="Type Password"
+                />
+              </div>
+            </div>
+
+            <div class="from_content">
+              <label class="label">
+                Comfirm Password <span class="text-danger ml-1">*</span>
+              </label>
+              <div class="input_container">
+                <i class="fa-solid fa-key fa-lg icon"></i>
+                <input
+                  class="input-field"
+                  type="password"
+                  placeholder="Type Comfirm Password "
+                />
+              </div>
+            </div>
+
+            <p class="Password_format">
+              Password must contain at least 1 capital letter, A number and
+              symbol and minimum length 8.
+            </p>
+            <div class="d-flex align-items-center">
+              <hr class="singup_divider" />
+              <h5 class="contact_text">Your contacts</h5>
+              <hr class="singup_divider" />
+            </div>
+
+            <div class="from_content">
+              <label class="label">
+                First Name<span class="text-danger ml-1">*</span>
+              </label>
+              <div class="input_container">
+                <i class="fa-solid fa-user-tie fa-lg icon"></i>
+                <input
+                  class="input-field"
+                  type="text"
+                  placeholder="Type First Name"
+                />
+              </div>
+            </div>
+
+            <div class="from_content">
+              <label class="label">
+                Last Name<span class="text-danger ml-1">*</span>
+              </label>
+              <div class="input_container">
+                <i class="fa-solid fa-user-tie fa-lg icon"></i>
+                <input
+                  class="input-field"
+                  type="text"
+                  placeholder="Type Last Name"
+                />
+              </div>
+            </div>
+
+            <div class="from_content">
+              <label class="label">
+                Website<span class="text-danger ml-1">*</span>
+              </label>
+              <div class="input_container">
+                <i class="fa-brands fa-wordpress fa-lg icon"></i>
+                <input
+                  class="input-field"
+                  type="text"
+                  placeholder="Type Website"
+                />
+              </div>
+            </div>
+            <div class="from_content">
+              <label class="label">
+                Company Name<span class="text-danger ml-1">*</span>
+              </label>
+              <div class="input_container">
+                <i class="fa-solid fa-location-dot fa-lg icon"></i>
+                <input
+                  class="input-field"
+                  type="text"
+                  placeholder="Type Company Name"
+                />
+              </div>
+            </div>
+
+            <div class="from_content">
+              <label class="label">
+                Phone<span class="text-danger ml-1">*</span>
+              </label>
+              <div class="input_container">
+                <i class="fa-solid fa-phone-volume fa-lg icon"></i>
+                <input
+                  class="input-field"
+                  type="text"
+                  placeholder="Type Phone Number"
+                />
+              </div>
+            </div>
+
+            <div class="from_content">
+              <label class="label">
+                Select Country <span class="text-danger ml-1">*</span>
+              </label>
+              <div class="input_container">
+                <i class="fa-solid fa-phone-volume fa-lg icon"></i>
+                <select class="form-control" id="mySelect" runat="server">
+                  <option value="AL">Alabama</option>
+                  <option value="WY">Wyoming</option>
+                  <option value="WY">Wyoming</option>
+                  <option value="WY">Wyoming</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="from_content">
+              <label class="label">
+                Select State <span class="text-danger ml-1">*</span>
+              </label>
+              <div class="input_container">
+                <select name="Status" id="active" class="input-select">
+                  <option value="Active" class="select-input">-State-</option>
+                  <option value="Inactive" class="select-input">
+                    Inactive
+                  </option>
+                </select>
+              </div>
+            </div>
+
+            <div class="from_content">
+              <label class="label">
+                Address<span class="text-danger ml-1">*</span>
+              </label>
+              <div class="input_container">
+                <i class="fa-solid fa-location-dot fa-lg icon"></i>
+                <textarea name="" id="" class="singup_textarea"></textarea>
+              </div>
+            </div>
+
+            <div class="from_content">
+              <label class="label">
+                Profile Picture<span class="text-danger ml-1">*</span>
+              </label>
+              <div class="input_container">
+                <input type="file" class="input-select" type="file" />
+              </div>
+            </div>
+
+            <div class="submit_btn_container">
+              <button class="submit_btn">
+                Register
+                <span>
+                  <i
+                    class="fa-regular fa-circle-right fa-sm ml-1"
+                    style="color: #f5f4f4"
+                  ></i>
+                </span>
+              </button>
+            </div>
           </form>
-          <p class="login_link">Already have an account? <span>
-            <a href="singin.html">Sign in</a>
-          </span></p>
+          <div class="d-flex align-items-center">
+            <hr class="singup_divider" />
+            <h5 class="contact_text">have an account?</h5>
+            <hr class="singup_divider" />
+          </div>
+          <div class="submit_btn_container">
+            <a href="singin.html" class="login_btn">Login</a>
+          </div>
         </div>
       </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js"></script>
-    <script src="custom.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="../custom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.0.4/popper.js"></script>
     <script src="https://cdn.usebootstrap.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </body>
