--- a/client protal/Auth/singin.html
+++ b/client protal/Auth/singin.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="singin.css" />
-
     <link
       rel="stylesheet"
       href="https://cdn.usebootstrap.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -15,17 +14,6 @@
       src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
       crossorigin="anonymous"
     ></script>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.datatables.net/1.10.18/css/jquery.dataTables.min.css"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1"></script>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.datatables.net/1.10.18/css/jquery.dataTables.min.css"
-    />
   </head>
   <body>
     <div class="login_container">
@@ -49,29 +37,27 @@
               <label>Password</label><br />
               <input type="password" name="" id="" />
             </div>
-           
 
             <div class="my-3">
               <input type="checkbox" id="checkbox1" class="cheeck-box" />
-              <label for="checkbox1" class="cleckbox-lebel mr-1">Remember me</label>
+              <label for="checkbox1" class="cleckbox-lebel mr-1"
+                >Remember me</label
+              >
             </div>
 
             <div class="login_input mt-4">
-                <input type="submit" value="Sign up" class="submit_btn">
+              <input type="submit" value="Sign up" class="submit_btn" />
             </div>
-           
           </form>
-          <p class="login_link">Don't have an account? <span>
-            <a href="singup.html">Sign up</a>
-          </span></p>
+          <p class="login_link">
+            Don't have an account?
+            <span>
+              <a href="singup.html">Sign up</a>
+            </span>
+          </p>
         </div>
       </div>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js"></script>
-    <script src="custom.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.0.4/popper.js"></script>
     <script src="https://cdn.usebootstrap.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </body>
 </html>
